network_lb.tf
resource "aws_lb" "rke2-lb" {
  name               = "rke2-lb"
  internal           = false
  load_balancer_type = "network"
  subnets            = [aws_subnet.subnet.id]

  tags = {
    type = "rke2"
  }
}

locals {
  ids = [
    aws_spot_instance_request.master_node.spot_instance_id,
    aws_spot_instance_request.additional_master_nodes[0].spot_instance_id,
    aws_spot_instance_request.additional_master_nodes[1].spot_instance_id
  ]
}

resource "aws_lb_target_group_attachment" "tg-attachment" {
}

resource "aws_lb_target_group" "rke2-target-group" {
  for_each = var.lb_ports

  port = each.value
  protocol = "TCP"
  vpc_id = aws_vpc.main.id

  depends_on = [aws_lb.rke2-lb]

  /* lifecycle { */
  /*   create_before_destroy = true */
  /* } */
}

resource "aws_lb_listener" "rke2-lb-listener" {
  for_each = var.lb_ports

  load_balancer_arn = aws_lb.rke2-lb.arn
  port = each.value
  protocol = "TCP"
  
  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.rke2-target-group[each.key].arn
  }
}
